--- a/.env
+++ b/.env
@@ -24,7 +24,8 @@ APP_SECRET=e2922dec5ac3b2ad0ad180198701e544
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:troiswa@localhost/empire
+#DATABASE_URL=mysql://root:troiswa@localhost/empire
+DATABASE_URL=mysql://leon:Min@to2&@localhost:3306/empire
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
