--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    music_directory: '%kernel.project_dir%/public/music'
+    file_directory: '%kernel.project_dir%/public'
+#    image_directory: '%kernel.project_dir%/public/image'
 
 services:
     # default configuration for services in *this* file
@@ -31,4 +32,4 @@ services:
 
     App\Service\FileUploader:
         arguments:
-            $targetDirectory: '%music_directory%'
+            $targetDirectory: '%file_directory%'
