Fix link & label in twig

--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ APP_SECRET=e2922dec5ac3b2ad0ad180198701e544
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://root:troiswa@localhost/empire
 DATABASE_URL=mysql://leon:Min@to2&@localhost:3306/empire
+#DATABASE_URL=mysql://dbu173566:Min@to2&@db5000157339.hosting-data.io:3306/dbs152388
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
