--- a/.env
+++ b/.env
@@ -33,5 +33,6 @@ DATABASE_URL=mysql://leon:Min@to2&@localhost:3306/empire
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+#MAILER_URL=null://localhost
+MAILER_URL=smtp://smtp.mailtrap.io:2525?encryption=tls&auth_mode=login&username=6198a07b125851&password=849b435a062100
 ###< symfony/swiftmailer-bundle ###
