--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,8 +11,8 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-#        bind:
-#            string $musicPath = 'music/'
+        bind:
+            $adminMail: '14a0577f61-54f64c@inbox.mailtrap.io'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
