--- a/.env
+++ b/.env
@@ -35,4 +35,5 @@ DATABASE_URL=mysql://leon:Min@to2&@localhost:3306/empire
 # Delivery is disabled by default via "null://localhost"
 #MAILER_URL=null://localhost
 MAILER_URL=smtp://smtp.mailtrap.io:2525?encryption=tls&auth_mode=login&username=6198a07b125851&password=849b435a062100
+#MAILER_URL=smtp://smtp.ionos.fr:465?encryption=tls&auth_mode=login&username=korthes@legiste.net&password=Min@to2&
 ###< symfony/swiftmailer-bundle ###
