--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $adminMail: '14a0577f61-54f64c@inbox.mailtrap.io'
+#            $adminMail: 'korthes@legiste.net'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
